--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.uiresource.messenger"
+        applicationId "com.ag"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
