--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".Messola">
         <activity
             android:name="com.ag.Splash"
             android:theme="@style/AppThemeFull">
@@ -20,7 +21,7 @@
         </activity>
 
         <activity
-            android:name=".BaseActivity">
+            android:name="com.ag.BaseActivity">
         </activity>
         <activity
             android:name="com.ag.SetupPhoneNumber"
