--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.0.2'
+    compile 'com.simplecityapps:recyclerview-fastscroll:1.0.5'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.android.support:support-v4:25.1.1'
     testCompile 'junit:junit:4.12'
